# swagger.yaml
@@ -117,6 +117,32 @@ paths:
         '200':
           description: OK
 
+  /datasets/search:
+   get:
+     summary: Returns all dataset results
+      tags:
+         - Search
+      responses: 
+        '200':
+      description: OK  
+
+  /datasets/search?search={searchTerm}:
+    get:
+      summary: Returns dataset search results by searchTerm
+      tags:
+        - Search
+      parameters:
+        - name: searchTerm
+          in: path
+          required: true
+          description: A search term.
+          schema:
+            type : string
+            example: epilepsy
+      responses: 
+        '200':
+          description: OK
+
   /search?search={searchTerm}&maxResults={maxResults}:
     get:
       summary: Returns search results by searchTerm with a limit of maxResults
